--- a/TestXmlSerialize/TestXmlSerialize.csproj
+++ b/TestXmlSerialize/TestXmlSerialize.csproj
@@ -64,6 +64,12 @@
     <Compile Include="FrmDailyPlan.Designer.cs">
       <DependentUpon>FrmDailyPlan.cs</DependentUpon>
     </Compile>
+    <Compile Include="HandlingDataIsNull.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HandlingDataIsNull.Designer.cs">
+      <DependentUpon>HandlingDataIsNull.cs</DependentUpon>
+    </Compile>
     <Compile Include="PlanData.cs" />
     <Compile Include="PlanItem.cs" />
     <Compile Include="Program.cs" />
@@ -76,6 +82,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HandlingDataIsNull.resx">
+      <DependentUpon>HandlingDataIsNull.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
